--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header {
     align-items: center;
     gap: 1rem;
     font-family: var(--ff-heading);
-    font-size: var(--fs-500);
+    font-size: var(--fs-600);
     position: relative;
 }
 
@@ -72,7 +72,7 @@ header a {
     background-color: var(--clr-neutral);
     color:var(--clr-primary);
     font-family: var(--ff-body);
-    font-weight: 500;
+    font-size: var(--fs-400);
     transition: background-color 1.2s color 1.2s;
 }
 .btn:hover {
@@ -88,7 +88,7 @@ header a {
     display: grid;
     place-items: center;
     align-items: center;
-    min-height: 70vh;
+    min-height: 80vh;
 }
 .card__container:nth-child(1) {
     text-align: center;
@@ -196,6 +196,37 @@ header a {
     filter:blur(0);
     transform:translateX(0);
 }
+/* Mobile Screens */
+@media (max-width:415px) {
+    body {
+        display: grid;
+    }
+    header {
+        justify-content: left;
+        max-width: 100%;
+    }
+    header nav {
+        max-width: fit-content;
+    }
+    .card__container {
+        max-width: 100%;
+        display:grid;
+        min-height: 100vh;
+    }
+    .card__content {
+        display: grid;
+        place-items: center;
+    }
+    .card__content p {
+        font-size: var(--fs-500);
+        text-align:center;
+    }
+    .card__content_images img {
+        width: 4rem;
+        height: 4rem;
+    }
+}
+
 /* Scrollbar edits */
 ::-webkit-scrollbar {
     width:0.5rem;
@@ -221,9 +252,14 @@ header a {
 .dark a {
     color: var(--clr-neutral-dark);
 }
+.dark .btn {
+    background-color: var(--clr-primary);
+    color:var(--clr-neutral);
+}
 :root {
     --ff-body:'Ubuntu',sans-serif;
     --ff-heading:'Kreon',serif;
+
     --fw-400:400;
     --fw-500:500;
     --fw-700:700;
